plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1' apply false
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.freefair.lombok' version '8.12.2' apply false
    id 'jacoco'
    id 'org.owasp.dependencycheck' version '12.1.0'
}

allprojects {
    group = 'nuri'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        google()
        maven { url 'https://maven.egovframe.go.kr/maven/' }
    }

    apply plugin: 'jacoco'
    apply plugin: 'org.owasp.dependencycheck'
    
    jacoco {
        toolVersion = "0.8.14"
    }
    
    // OWASP Dependency-Check 설정
    dependencyCheck {
        // 분석 실패 기준 CVE 스코어 (0-10, 7 이상은 High)
        failBuildOnCVSS = 7
        
        // 분석 제외 의존성
        skipConfigurations = [
            'compileOnly',
            'testCompileOnly',
            'annotationProcessor',
            'testAnnotationProcessor'
        ]
        
        // NVD API 키 (선택사항, 있으면 업데이트 속도 향상)
        // nvd.apiKey = System.getenv('NVD_API_KEY')
        
        // 리포트 설정
        formats = ['HTML', 'JUNIT']
        
        // 스캔 제외 파일 패턴
        suppressionFile = file('config/dependency-check/suppressions.xml').absolutePath
        
        // 데이터베이스 디렉토리 설정
        data.directory = file("${rootProject.buildDir}/dependency-check-cache")
        
        
        /* 
        // 스캔 대상 아키텍처
        analyzers {
            // Jar 파일 분석
            jarEnabled = true
            // Maven Central 검색 사용
            centralEnabled = true
            // NVD 데이터베이스 사용
            nvdEnabled = true
        }
        */
    }
}

tasks.withType(Test) {
    useJUnitPlatform()
    systemProperty "spring.main.allow-bean-definition-overriding", "true"
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'io.freefair.lombok'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs << "-parameters"
    }

    tasks.withType(Test).configureEach {
        systemProperty 'file.encoding', 'UTF-8'
        useJUnitPlatform()
        systemProperties System.properties
        maxHeapSize = "6144m"
        ignoreFailures = false
        
        // Jacoco 명시적 설정: 하위 프로젝트별 물리적 build 폴더 하위에 격리하여 생성 강제
        jacoco {
            enabled = true
            destinationFile = layout.buildDirectory.file("jacoco/test.exec").map { it.asFile }.get()
        }
        
        finalizedBy 'jacocoTestReport'
    }

    // 실행 시(bootRun 포함) UTF-8 인코딩 강제 설정
    tasks.withType(JavaExec).configureEach {
        systemProperty 'file.encoding', 'UTF-8'
        systemProperty 'sun.jnu.encoding', 'UTF-8'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.1"
        }
    }

    configurations.all {
        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j2-impl'
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation libs.springdoc.openapi
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        implementation 'com.google.code.findbugs:jsr305:3.0.2'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    jacocoTestReport {
        reports {
            xml.required = true
            html.required = true
        }
    }
}

// 통합 리포트 태스크 (현대적인 Gradle 9 멀티프로젝트 집계 설정)
tasks.register('jacocoRootReport', JacocoReport) {
    description = 'Generates an aggregate report from all subprojects using explicit paths'
    group = 'Verification'

    // 모든 하위 프로젝트의 테스트 태스크에 의존
    dependsOn subprojects.collect { it.tasks.withType(Test) }
    mustRunAfter subprojects.collect { it.tasks.withType(Test) }

    // 소스 디렉토리 통합 (물리적 경로로 명시)
    sourceDirectories.setFrom(subprojects.collect { 
        file("${it.projectDir}/src/main/java") 
    })

    // 클래스 디렉토리 통합 및 필터링
    classDirectories.setFrom(subprojects.collect { 
        fileTree(dir: "${it.projectDir}/build/classes/java/main", exclude: [
            "**/Q*.class",
            "**/Q*Entity.class",
            "**/*Request.class",
            "**/*Response.class",
            "**/*Dto.class",
            "**/dto/**",
            "**/*Config.class",
            "**/*Application.class",
            "**/*VO.class",
            "**/*DAO.class",
            "**/*Mapper.class",
            "**/*Initializer.class",
            "**/*Advice.class"
        ])
    })

    // 실행 데이터(.exec) 통합: 모든 하위 프로젝트가 루트의 단일 파일로 모이는 현상 활용
    executionData.setFrom(file("${rootProject.buildDir}/jacoco/test.exec"))

    reports {
        xml.required = true
        html.required = true
        html.outputLocation = layout.buildDirectory.dir("reports/jacoco/aggregated")
    }
}

// 루트 프로젝트 JaCoCo 커버리지 검증
tasks.register('jacocoRootCoverageVerification', JacocoCoverageVerification) {
    description = 'Verifies code coverage for all subprojects'
    group = 'Verification'
    
    dependsOn jacocoRootReport
    
    violationRules {
        rule {
            // 전체 프로젝트 최소 커버리지 목표
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.50 // 50% 이상 목표
            }
        }
    }
}
